# capi20proxy

linux-client/: Makefile.in  capi20client.c  configure.in  readme.txt
linux-client/daemon/: capiinfo.buf  test.c
linux-client/daemon/src/: Makefile  c2pclient.c  protocol.h  unix.c
linux-client/gerald-module/: capicmd.h  capiproxy.c
linux-client/module/: CAPI 2.0 Proxy-moduletest.doc  Makefile  capi2.c  capi20proxy.c  capi20proxy.h  capiproxy.c  capiutil.h  config.status  configure  queue.c  queue.h  readme.txt
linux-client/module/patch/: capi20proxy-2.4.18.patch  capi20proxy-2.4.19.patch
linux-client/reds-module/: capiproxy.c  queue.c  queue.h
linux-server/: AUTHORS  ChangeLog  DEV_NOTES  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
linux-server/contrib/: Makefile.am  Makefile.in
linux-server/doc/: Makefile.am  Makefile.in
linux-server/src/: Makefile  Makefile.am  Makefile.in  appindex.c  capifwd  capifwd.8  capifwd.c  capifwd.h  protocol.h  unix.c
linux-server/src/auth/: auth.c
linux-server/src/capi/: etc.c  getmessage.c  isinstalled.c  manufacturer.c  profile.c  proxy.c  putmessage.c  register.c  release.c  serial.c  version.c  waitforsignal.c
linux-server/src/config/: cmdline.c  config.h  hash-xml.c  hash.c
linux-server/src/old/: main-rev1.14-cvs.c
linux-server/src/scripts/: capifwd  checkdep.sh
win32-client/: StdAfx.cpp  StdAfx.h  capi2032.cpp  capi2032.def  capi2032.dsp  capi2032.h  protocol.h  readme.txt  resource.rc  warning.txt
win32-client/CPL/: CPL.cpp  CPL.dsp  CPL.rc  StdAfx.cpp  resource.h
win32-server/: StdAfx.cpp  StdAfx.h  capi2032.lib  capi20proxy-win32-server.doc  capi20proxy.reg  capi20server.cpp  capi20server.dsp  capi20server.h  mytypes.h  protocol.h  resource.h  resource.rc
win32-server/CPL/: CPL.cpp  CPL.def  CPL.rc  StdAfx.h  resource.h
win32-server/CPL/res/: CPL.rc2
