sbin_PROGRAMS = capifwd
capifwd_SOURCES = capifwd.c appindex.c unix.c auth/auth.c capi/getmessage.c capi/manufacturer.c capi/proxy.c \
	capi/register.c capi/serial.c capi/waitforsignal.c capi/etc.c capi/isinstalled.c capi/profile.c \
	capi/putmessage.c capi/release.c capi/version.c config/cmdline.c protocol.h capifwd.h
capifwd_LDADD = -lcapi20

